# cw-course

counting_contract/: Cargo.toml
counting_contract/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
counting_contract/src/multitest/: tests.rs
counting_contract_0.2/: Cargo.toml
counting_contract_0.2/.cargo/: .config.swp
counting_contract_0.2/schema/: counting_contract.json
counting_contract_0.2/src/: contract.rs  lib.rs  msg.rs  multitest.rs  state.rs
counting_contract_0.2/src/multitest/: tests.rs
