[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.4"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.15.1"
schemars = "0.8.11"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
cw-multi-test = "0.15.1"
